welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:16: error: reassignment to val
    decalage = litMessage().toInt
             ^Array2:19: error: type mismatch;
 found   : Int
 required: String
      setCouleurBrosse((tab(j)+decalage)%l)
                               ^Array2:24: error: not found: value j
    setCouleurBrosse(tab(j))
                         ^